--- a/board.css
+++ b/board.css
@@ -161,9 +161,9 @@ body {
     max-width: 100%;
 }
 
-.list {
-    min-height: 400px;
-}
+/* .list {
+    height: (100% - 90px);
+} */
 
 .card-head {
     display: flex;
