--- a/board.css
+++ b/board.css
@@ -333,8 +333,7 @@ body {
     margin-top: -15px;
     width: 100%;
     justify-content: end;
-    max-width: 250px;
-
+    min-width: 250px;
 }
 
 .arrow-up {
