--- a/board.css
+++ b/board.css
@@ -430,6 +430,8 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 5px;
+    min-width: 250px;
+
 }
 
 .card-change-status span,
