--- a/asssets/css/add_task.css
+++ b/asssets/css/add_task.css
@@ -76,10 +76,14 @@ border: none;
 .all-input, textarea {
   
   margin-bottom: 10px;
-  
+  text-indent: 21px;
   background: #FFFFFF;
   border: 1px solid #D1D1D1;
   border-radius: 10px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
 }
 input {
   height: 41px;
@@ -181,6 +185,7 @@ input[type="date"]::before {
   cursor: pointer;
   transition: 125ms;
   border: 1px solid #D1D1D1;
+  text-indent: 11px;
 }
 
 .select-one span {
@@ -583,6 +588,10 @@ border-top: none;
   margin-left: 26px;
   width: 26px;
   height: 22px;
+}
+
+.dateInput {
+  text-indent: 11px !important;
 }
 
 @keyframes slideInFromBottom {
