--- a/task-popUp.css
+++ b/task-popUp.css
@@ -180,11 +180,10 @@
 
 .popUp-btns {
     display: flex;
-    flex-direction: column;
-    gap: 16px;
     max-width: 597px;
-    margin-right: 33px;
+    margin-right: 10%;
     align-items: flex-end;
+    margin-top: 100px;
     
 }
 
@@ -251,11 +250,48 @@
     display: none;
 }
 
-@media (max-width: 550px) {
-
-    .secondTypebtns{
-        display: none
+@media (max-width: 370px) {
+    .assignedTo-divE {
+        margin-left: 16px;
     }
+}
+
+@media (max-width: 650px) {
+    
+    #taskContent {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+
+    .edit-wrap {
+        width: 100%;
+        height: 100%;
+        margin-left: 16px;
+    }
+
+    /* .secondTypebtns{
+        display: none
+    } */
+
+}
+
+@media (max-width: 550px) {
+    
+    /* #taskContent {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+
+    .edit-wrap {
+        width: 100%;
+        height: 100%;
+    } */
+
+    /* .secondTypebtns{
+        display: none
+    } */
 
 }
 @media (min-width: 550px) {
