--- a/asssets/css/board.css
+++ b/asssets/css/board.css
@@ -23,7 +23,6 @@ body {
     background: #2A3647;
 }
 
-
 .orange {
     background: #FF7A00;
 }
@@ -67,8 +66,6 @@ body {
 .light-orange {
     background: orange;
 }
-
-
 
 .main-div {
     background-color: #F5F5F5;
@@ -117,6 +114,7 @@ body {
     height: 37px;
     border: 1px solid #A8A8A8;
     border-radius: 10px;
+    text-indent: 20px;
 }
 
 .search-icon {
@@ -136,7 +134,6 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #D1D1D1;
-    padding-left: 21px;
 }
 
 /*////////////////// Searchbar on Screen 1024px /////////////////*/
@@ -301,7 +298,6 @@ body {
 }
 
 .empty-card {
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -350,7 +346,6 @@ body {
     background: blue;
 }
 
-
 /*----add-tast-popUp---------*/
 .popup-overlay {
     position: fixed;
@@ -380,8 +375,6 @@ body {
     display: flex;
     justify-content: center;
     overflow-y: auto;
-
-
 }
 
 .popup-overlay.active {
@@ -433,7 +426,6 @@ body {
     align-items: center;
     gap: 5px;
     min-width: 250px;
-
 }
 
 .card-change-status span,
@@ -621,9 +613,3 @@ body {
         height: auto;
     }
 }
-
-/* @media (max-width: 723px) {
-    .list {
-        min-height: 100px !important;
-    }
-} */
