--- a/asssets/templates/web_header.html
+++ b/asssets/templates/web_header.html
@@ -7,8 +7,7 @@
         <div class="img-container">
             <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg"
                 alt="">
-            <img id="person-img" onclick="burgerMenu()" class="person" src="./asssets/img/person.svg"
-                alt="">
+            <img id="person-img" onclick="burgerMenu()" class="person" src="./asssets/img/person.svg" alt="">
         </div>
     </div>
     <div onclick="closeBurgerMenu()" id="background-container">
@@ -20,7 +19,6 @@
             </div>
         </div>
     </div>
-
     <div class="nav-bar-container">
         <div id="nav-bar" onclick="closeBurgerMenu()" class="logo-container">
             <img class="logo-white" src="./asssets/img/Join_logo_white.svg" alt="">
